<resources>
    <string name="app_name">meteoapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar_hint">Search City</string>
    <string name="ricerche_recenti">Recent Search</string>
    <string name="today">%s</string>
    <string name="date">%s</string>
    <string name="tempMax">%s °</string>
    <string name="text_temp1">min</string>
    <string name="tempMin">%s °</string>
    <string name="text_temp2">max</string>
    <string name="title">%s,%s</string>
    <string name="rainfallPercent">%s %%</string>
    <string name="rainfall">precip.</string>
    <string name="windKmh">%s Km/h</string>
    <string name="wind">wind</string>
    <string name="nextDays">%s</string>
    <string name="next_days">Next 5 days</string>
    <string name="todaylabel">Today</string>
    <string name="tomorrowlabel">Tomorrow</string>






    <string name="data_today">%s %s %s</string>

    //--- row ---
    <string name="ora_giorno">%s</string>
    <string name="temperatura_giorno_20">20°</string>
    <string name="humidity_10">10%</string>


    //--- card ---
    <string name="percepita_card">percepita</string>
    <string name="indice_uv_card">index UV</string>
    <string name="umidit_card">humidity</string>
    <string name="vento_card">wind</string>
    <string name="copertura_card">coverage</string>
    <string name="pioggia_card">rain</string>

    <string name="percepita_40">40°</string>
    <string name="UV_5_10">5/10</string>
    <string name="umidità_60">60%</string>
    <string name="vento_7">SSE 7km/h</string>
    <string name="copertura_24">24%</string>
    <string name="pioggia_0cm">0cm</string>
    <string name="ora_giorno_13">13.00</string>
    <string name="humidity_20">20%</string>
    <string name="ora_giorno_14">14.00</string>
    <string name="temperatura_giorno_25">25°</string>
    <string name="humidity_30">30%</string>
    <string name="temperatura_giorno_30">30°</string>
    <string name="place">Torino, Piemonte</string>

    //--- simboli ---
    <string name="simbol_gradi">%s°</string>
    <string name="simbol_percentuale">%s%%</string>
    <string name="simbol_UV">%s/10</string>
    <string name="simbol_SSE">SSE %s km/h</string>
    <string name="simbol_cm">%scm</string>
    <string name="simbol_virgola">%s, %s</string>
    <string name="home">Home</string>
    <string name="oggi">Today</string>
    <string name="domani">Tomorrow</string>
    <string name="cerca">Search</string>
    <string name="UV_valore">%s/10</string>
    <string name="vento_valore">SSE %skm/h</string>
    <string name="pioggia_valore">%scm</string>

    <string name="language">en</string>
    <string name="riprova">Retry connect</string>


</resources>

