<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="19dp"
        app:cardBackgroundColor="#948CEF"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dayCard"
                android:layout_alignParentStart="true"
                android:text="@string/today"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/inter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minTempCard"
                android:layout_centerHorizontal="true"
                android:text="@string/tempMin"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/inter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/maxTempCard"
                android:layout_alignParentEnd="true"
                android:text="@string/tempMax"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/inter" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateCard"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dayCard"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minTemp_text"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/minTempCard"
                android:text="@string/text_temp1"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/maxTempText"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/maxTempCard"
                android:text="@string/text_temp2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sun_icon"
                android:layout_below="@id/dateCard"
                android:layout_marginTop="24dp"/>
            <TextView
                android:id="@+id/rainfallPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/minTemp_text"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter"
                android:text="@string/tempMin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rainfall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rainfallPercent"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/inter"
                android:text="@string/rainfall"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/windKmhCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
                android:layout_below="@+id/minTemp_text"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/inter"
                android:text="@string/windKmh"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/windCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rainfallPercent"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/inter"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="16sp" />





        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>